# Context-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: create_wandb_report.py  prepare_eval_dataset.py  validate_eval_dataset.py
slidevqa_experiment/: cli.py  clients.py  config.py  pipeline.py  prompts.py  schemas.py  utils.py
