[project]
name = "context-rag"
version = "0.1.0"
description = "Minimal script-driven multimodal RAG experiment runner for SlideVQA"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch[async]>=8.13,<9",
    "qdrant-client>=1.12",
    "httpx>=0.27",
    "pillow>=10.0",
    "datasets>=3.0",
    "weave>=0.51",
    "diskcache>=5.6",
    "openai>=1.50",
    "ragas>=0.4.3",
    "evaluate>=0.4.6",
    "pytrec-eval>=0.5",
    "ipywidgets>=8.1.8",
]

[project.scripts]
run-slidevqa-experiment = "slidevqa_experiment.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slidevqa_experiment"]
